--- a/views/index.erb
+++ b/views/index.erb
@@ -3,7 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title><%= @title %></title>
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" type="text/css" href="/github.css" />
+    <link rel="stylesheet" href="/styles/default.css" />
+    <script src="highlight.pack.js"></script>
+    <script>hljs.initHighlightingOnLoad();</script>
   </head>
   <body>
     <%= @body %>
