--- a/views/index.erb
+++ b/views/index.erb
@@ -5,7 +5,7 @@
     <title><%= @title %></title>
     <link rel="stylesheet" type="text/css" href="/github.css" />
     <link rel="stylesheet" href="/styles/default.css" />
-    <script src="highlight.pack.js"></script>
+    <script src="/highlight.pack.js"></script>
     <script>hljs.initHighlightingOnLoad();</script>
   </head>
   <body>
