--- a/views/index.erb
+++ b/views/index.erb
@@ -3,12 +3,18 @@
   <head>
     <meta charset="utf-8">
     <title><%= @title %></title>
-    <link rel="stylesheet" type="text/css" href="/github.css" />
-    <link rel="stylesheet" href="/styles/default.css" />
-    <script src="/highlight.pack.js"></script>
+    <link rel="stylesheet" type="text/css" href="/css/github.css" />
+    <script src="/js/jquery-2.2.1.min.js"></script>
+    <link rel="stylesheet" href="/css/styles/default.css" />
+    <script src="/js/highlight.pack.js"></script>
     <script>hljs.initHighlightingOnLoad();</script>
   </head>
   <body>
     <%= @body %>
+
+    <hr />
+    <p>
+      <strong><a href="<%= @back %>">戻る</a></strong>
+    </p>
   </body>
 </html>
