Address an issue with back link

--- a/views/index.erb
+++ b/views/index.erb
@@ -14,7 +14,9 @@
 
     <hr />
     <p>
-      <strong><a href="<%= @back %>">戻る</a></strong>
+      <div style="text-align: center;">
+        <strong><a href="<%= @back %>">戻る</a></strong>
+      </div>
     </p>
   </body>
 </html>
