(Fxi #28) Add top back link

--- a/views/index.erb
+++ b/views/index.erb
@@ -15,7 +15,14 @@
     <hr />
     <p>
       <div style="text-align: center;">
-        <strong><a href="<%= @back %>">戻る</a></strong>
+        <strong><a href="<%= @back %>">ディレクトリトップへ戻る</a></strong>
+      </div>
+    </p>
+
+    <hr />
+    <p>
+      <div style="text-align: center;">
+        <strong><a href='/'>トップへ戻る</a></strong>
       </div>
     </p>
   </body>
