--- a/views/index.erb
+++ b/views/index.erb
@@ -12,18 +12,22 @@
   <body>
     <%= @body %>
 
-    <hr />
-    <p>
-      <div style="text-align: center;">
-        <strong><a href="<%= @back %>">ディレクトリトップへ戻る</a></strong>
-      </div>
-    </p>
+    <% if @backlink %>
+      <hr />
+      <p>
+        <div style="text-align: center;">
+          <strong><a href="<%= @back %>">ディレクトリトップへ戻る</a></strong>
+        </div>
+      </p>
+    <% end %>
 
-    <hr />
-    <p>
-      <div style="text-align: center;">
-        <strong><a href='/'>トップへ戻る</a></strong>
-      </div>
-    </p>
+    <% if @toplink %>
+      <hr />
+      <p>
+        <div style="text-align: center;">
+          <strong><a href='/'>トップへ戻る</a></strong>
+        </div>
+      </p>
+    <% end %>
   </body>
 </html>
