--- a/views/edit.erb
+++ b/views/edit.erb
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title><%= @title %></title>
+    <title><%= @title %> の編集</title>
     <link rel="stylesheet" type="text/css" href="/css/github.css" />
     <script src="/js/jquery-2.2.1.min.js"></script>
     <link rel="stylesheet" href="/css/styles/default.css" />
@@ -10,14 +10,13 @@
     <script>hljs.initHighlightingOnLoad();</script>
   </head>
   <body>
-    <% if @editlink %>
-      <p>
-        <div style="text-align: center;">
-          <strong><a href="/<%= @filename %>?edit=1">編集する</a></strong>
-        </div>
-      </p>
-    <% end %>
-    <%= @body %>
+  <p><%= @title %></p>
+  <form action="/<%= @filename%>" method="POST">
+    <input type="hidden" name="directory" value="<%= @directory%>">
+    <input type="hidden" name="filename" value="<%= @filename%>">
+    <textarea name="body" style="height:80%;width:100%;" rows=25><%= @body %></textarea>
+    <input type="submit" value="保存する">
+  </form>
 
     <% if @backlink %>
       <hr />
